# HandTracked-Tennis-C

./: ARCHITECTURE.md  CMakeLists.txt  HAND_TRACKING_GUIDE.md  QUICK_START.md  README.md  ai_opponent.c  calib.c  calib.h  game.c  game.h  hand_tracker.c  hand_tracker.cpp  hand_tracker.h  main.c  physics.c  rendering.c  run.bat
models/: README.md
